--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -174,3 +174,10 @@ canvas {
     width: 207px;
     height: 27px;
 }
+
+#renderingInfo {
+    position: fixed;
+    left: 0;
+    top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
